#56: autocompletion redesign